added file upload and ethereum methods
